[Add my portfolio section and explanation] index.html: add my porfolio section explanation.txt: some useful commands to use in git

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Clase GIT!</h1>
     <h3>Cambio hecho en github</h3>
+    <div class="portfolio">
+        <h2>Hola este es mi portafolio!!!!</h2>
+    </div>
 </body>
 </html>
