[Add 3 cards in my portfolio]

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h3>Cambio hecho en github</h3>
     <div class="portfolio">
         <h2>Hola este es mi portafolio!!!!</h2>
+        <p>Esta es una tarjeta de mi portafolio</p>
+        <p>Esta es una tarjeta de mi portafolio</p>
+        <p>Esta es una tarjeta de mi portafolio</p>
     </div>
 </body>
 </html>
